# HelloActions

./: CMakeLists.txt  hello.cpp
.github/workflows/: Build.yml  BuildAll.yml  BuildWindows.yml  BuildmacOS.yml
